# aoc

./: .gitignore  myproject.cabal  shell.nix
2022/src/: AOC13.hs  AOC14.hs  AOC15.hs  AOC16.hs  AOC18.hs  AOC19.hs  AOC21.hs  AOC22.hs  AOC5.hs
2023/: Cargo.toml  day1  shell.nix
2023/src/: day1.rs
2023/src/day1/: day1.rs  day1_part2.rs
2023/src/day4/: day4.rs  day4_1.rs
2023/src/day5/: day5.rs
src/Y2022/: AOC19.hs  AOC20.hs  AOC21.hs
