[package]
name = "aoc2023"
version = "0.1.0"
authors = ["keypush3r <keypush3r [at] keypush3r.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]

[[bin]]
name = "day1"
test = false
bench = false
path = "src/day1/day1.rs"
