[package]
name = "aoc2023"
version = "0.1.0"
authors = ["keypush3r <keypush3r [at] keypush3r.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6.0.0"
ranges = "0.3.3"

[[bin]]
name = "day1"
test = false
bench = false
path = "src/day1/day1.rs"

[[bin]]
name = "day1_2"
test = false
bench = false
path = "src/day1/day1_part2.rs"


[[bin]]
name = "day4"
test = false
bench = false
path = "src/day4/day4.rs"

[[bin]]
name = "day5"
test = false
bench = false
path = "src/day5/day5.rs"

